Add CharConstants & StringConstants classes
Signed-off-by: Thibault Meyer <meyer.thibault@gmail.com>